# invoice

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_QUICK.md  DEPLOYMENT_SUMMARY.txt  HTTPS_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PARTIAL_PAYMENT_IMPLEMENTATION.md  README.md  README_DEPLOYMENT.md  configure-ssl-security.sh  manual-ssl-setup.sh  setup-auto-renewal.sh  setup-https.sh  start-db.sh  test-https-setup.sh
backend/: .env.example  .sqlxrc.json  Cargo.toml  Dockerfile  INTEGRATION_TESTS_SUMMARY.md  README.md  fix_invoice.py  run_integration_tests.sh
backend/migrations/: 001_initial_schema.sql  002_add_invoice_settings.sql  003_tax_module_mvp.sql  004_fix_tax_id_length.sql  005_add_invoice_tracking_fields.sql  006_add_partial_payment_settings.sql  007_add_invoice_discussion.sql
backend/src/: main.rs
backend/src/api/: error.rs  mod.rs
backend/src/api/middleware/: auth.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs
backend/src/api/routes/: auth.rs  clients.rs  expenses.rs  files.rs  guest.rs  invoices.rs  metrics.rs  mod.rs  payments.rs  paypal.rs  reports.rs  settings.rs  tax.rs
backend/src/application/: mod.rs
backend/src/application/dto/: auth_dto.rs  invoice_dto.rs  mod.rs
backend/src/application/use_cases/: auth_use_cases.rs  client_use_cases.rs  expense_use_cases.rs  invoice_use_cases.rs  mod.rs  payment_use_cases.rs  report_use_cases.rs  settings_use_cases.rs  tax_use_cases.rs
backend/src/config/: mod.rs  validation.rs
backend/src/domain/: mod.rs
backend/src/domain/models/: audit.rs  client.rs  expense.rs  invoice.rs  mod.rs  payment.rs  tax.rs  user.rs
backend/src/domain/repositories/: mod.rs  report_repository.rs  tax_repository.rs
backend/src/domain/services/: auth_service.rs  (+20 more)
backend/src/infrastructure/: mod.rs
backend/tests/: README.md  integration_test.rs
backend/tests/integration/: advanced_features_test.rs  auth_test.rs  clients_test.rs  discussion_test.rs  expenses_test.rs  invoices_test.rs  mod.rs  payments_test.rs  paypal_test.rs  reports_test.rs  settings_test.rs  tax_test.rs  test_client.rs  utils.rs
(+85 files in other folders)
