[package]
name = "flashbill-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.4", features = ["typed-header", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit", "set-header", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34-deprecated"

# Database
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
redis = { version = "1.0.2", features = ["tokio-comp"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"
async-trait = "0.1"

# Password hashing
argon2 = "0.5"
rand = "0.9.2"

# JWT
jsonwebtokens = "1.2"
hmac = "0.12"
sha2 = "0.10"

# Email
lettre = "0.11"
reqwest = { version = "0.12.28", features = ["json"] }

# PDF Generation
printpdf = "0.8.2"
image = "0.25.9"

# CSV Export
csv = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32.0"

# Metrics
prometheus = "0.14.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"

# Config
config = "0.15.19"
dotenvy = "0.15"

# Rate limiting
governor = "0.10.4"
nonzero_ext = "0.3"

# File upload
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
mime_guess = "2.0"
futures-util = "0.3"

# Compression
async-compression = { version = "0.4", features = ["tokio", "gzip"] }

# Additional utilities
hex = "0.4"
base64 = "0.22"
regex = "1.10"
lazy_static = "1.4"

[dev-dependencies]
hyper = { version = "1.0", features = ["client"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }
